docs:분산시스템과 다중처리시스템

--- a/_posts/2020-01-08-Agile방법론.md
+++ b/_posts/2020-01-08-Agile방법론.md
@@ -56,7 +56,7 @@ _______________
 - 소프트웨어 개발 프로젝트 관리 프로세스 대안
 - 다른 Agile 실무와 방법을 돋보이게 함
 
-![Scrum프로세스](..\screenshots\Scrum프로세스.png)
+![Scrum프로세스](../screenshots/Scrum프로세스.png)
 
 ### Scrum 역할 : Product Owner
 
@@ -141,7 +141,7 @@ ___________
 
 - Product Vision Board
 
-  ![ProductVisionBoard](..\screenshots\ProductVisionBoard.png)
+  ![ProductVisionBoard](../screenshots/ProductVisionBoard.png)
 
   - Target Group - 목표 대상
   - NEEDS - 주어진 문제점
@@ -239,7 +239,7 @@ _________________
 - Release 계획은 "언제 완료될 것인지" 질문에 답을 하는 것
 - Release란 연속적인 Sprint를 통해서 완성
 
-![ReleasePlanning단계](..\screenshots\ReleasePlanning단계.png)
+![ReleasePlanning단계](../screenshots/ReleasePlanning단계.png)
 
 ### 만족 조건
 
@@ -325,7 +325,7 @@ _________________
 
 ### Velocity 기반 Sprint Planning
 
-![Velocity기반SprintPlanning](..\screenshots\Velocity기반SprintPlanning.png)
+![Velocity기반SprintPlanning](../screenshots/Velocity기반SprintPlanning.png)
 
 ### 우선순위 조정
 
