--- a/_posts/2020-01-13-분산 및 다중 처리 시스템.md
+++ b/_posts/2020-01-13-분산 및 다중 처리 시스템.md
@@ -43,7 +43,7 @@ ________
 
   하나의 시스템에서 장애가 발생해도 다른 시스템의 프로세서에 영향X
 
-  ![](../screenshots/약결합시스템.png)
+  <img class="image image--xl" src="https://github.com/Ungdoong/ungdoong.github.io/blob/master/assets/images/약결합시스템.png"/>
 
 ### 네트워크의 구조
 
@@ -57,7 +57,7 @@ ________
 
   신뢰성 높음
 
-  ![](../screenshots/완전연결네트워크.png)
+  <img class="image image--xl" src="https://github.com/Ungdoong/ungdoong.github.io/blob/master/assets/images/완전연결네트워크.png"/>
 
 - 트리(tree) 구조(계층(hierarchy) 구조)
 
@@ -71,7 +71,7 @@ ________
 
   부모가 고장나면 자식은 서로 통신 불가, 다른 프로세스와도 통신 불가
 
-  ![](../screenshots/트리구조네트워크.png)
+  <img class="image image--xl" src="https://github.com/Ungdoong/ungdoong.github.io/blob/master/assets/images/트리구조네트워크.png"/>
 
 - 성형(star) 구조
 
@@ -85,7 +85,7 @@ ________
 
   기본비용은 노드수에 비례, 통신비용 저렴, 집중 제어로 유지보수 용이
 
-  ![](../screenshots/성형구조네트워크.png)
+  <img class="image image--xl" src="https://github.com/Ungdoong/ungdoong.github.io/blob/master/assets/images/성형구조네트워크.png"/>
 
 - 링(ring) 구조
 
@@ -99,7 +99,7 @@ ________
 
   메시지가 링을 순환하면 통신비용 증가
 
-  ![](../screenshots/링구조네트워크.png)
+  <img class="image image--xl" src="https://github.com/Ungdoong/ungdoong.github.io/blob/master/assets/images/링구조네트워크.png"/>
 
 - 버스(bus) 구조
 
@@ -113,7 +113,7 @@ ________
 
   but, 버스가 고장나면 모든 노드 간 통신 불가능
 
-  ![](../screenshots/버스구조네트워크.png)
+  <img class="image image--xl" src="https://github.com/Ungdoong/ungdoong.github.io/blob/master/assets/images/버스구조네트워크.png"/>
 
 ### 원격 프로시저 호출(RPC, Remot Procedure Call)
 
@@ -127,7 +127,7 @@ ________
 
 - 일반적인 RPC 단계(요청과 응답관계, 1:1)
 
-  ![](../screenshots/RPC.png)
+  <img class="image image--xl" src="https://github.com/Ungdoong/ungdoong.github.io/blob/master/assets/images/RPC.png"/>
 
   
 
@@ -139,13 +139,13 @@ ________
 
 - RPC 동작 과정
 
-  ![](../screenshots/RPC동작과정.png)
+  <img class="image image--xl" src="https://github.com/Ungdoong/ungdoong.github.io/blob/master/assets/images/RPC동작과정.png"/>
 
 ### 분산 시스템의 구조와 구축 목적
 
 - 분산 시스템의 구조
 
-  ![](../screenshots/분산시스템.png)
+  <img class="image image--xl" src="https://github.com/Ungdoong/ungdoong.github.io/blob/master/assets/images/분산시스템.png"/>
 
   저렴한 노드 여러개를 운영체제 하나가 제어하여 하나의 프로그램처럼 동작
 
@@ -164,7 +164,3 @@ ________
   각종 자원의 투명성 보장
 
   => 상호연결된 컴퓨터를 사용자가 하나의 컴퓨터 시스템으로 인식할 수 있도록 함
-
-
-
-## 
