--- a/_posts/2020-01-08-Agile방법론.md
+++ b/_posts/2020-01-08-Agile방법론.md
@@ -56,7 +56,7 @@ _______________
 - 소프트웨어 개발 프로젝트 관리 프로세스 대안
 - 다른 Agile 실무와 방법을 돋보이게 함
 
-<img class="image image--xl" src="https://github.com/Ungdoong/ungdoong.github.io/blob/master/assets/images/Scrum프로세스.png"/>
+<img class="image image--lg" src="https://user-images.githubusercontent.com/41600558/72244870-86706900-3632-11ea-9531-a4137167a1ea.png"/>
 
 ### Scrum 역할 : Product Owner
 
@@ -141,7 +141,7 @@ ___________
 
 - Product Vision Board
 
-  <img class="image image--xl" src="https://github.com/Ungdoong/ungdoong.github.io/blob/master/assets/images/ProductVisionBoard.png"/>
+  <img class="image image--xl" src="https://user-images.githubusercontent.com/41600558/72244890-92f4c180-3632-11ea-8db5-a0f9f15453d8.png"/>
 
   - Target Group - 목표 대상
   - NEEDS - 주어진 문제점
@@ -239,7 +239,7 @@ _________________
 - Release 계획은 "언제 완료될 것인지" 질문에 답을 하는 것
 - Release란 연속적인 Sprint를 통해서 완성
 
-<img class="image image--xl" src="https://github.com/Ungdoong/ungdoong.github.io/blob/master/assets/images/ReleasePlanning단계.png"/>
+<img class="image image--xl" src="https://user-images.githubusercontent.com/41600558/72244931-a7d15500-3632-11ea-9ec5-0d5341d757c7.png"/>
 
 ### 만족 조건
 
@@ -325,7 +325,7 @@ _________________
 
 ### Velocity 기반 Sprint Planning
 
-<img class="image image--xl" src="https://github.com/Ungdoong/ungdoong.github.io/blob/master/assets/images/Velocity기반SprintPlanning.png"/>
+<img class="image image--xl" src="https://user-images.githubusercontent.com/41600558/72244960-b455ad80-3632-11ea-9d61-aef1ae8fec7b.png"/>
 
 ### 우선순위 조정
 
