--- a/_posts/2020-01-13-분산 및 다중 처리 시스템.md
+++ b/_posts/2020-01-13-분산 및 다중 처리 시스템.md
@@ -33,7 +33,7 @@ ________
 
     오직 하나의 프로세서만 공유 메모리 액세스 허용
 
-  <img class="image image--xl" src="https://github.com/Ungdoong/ungdoong.github.io/blob/master/assets/images/강결합시스템.png"/>
+  <img class="image image--xl" src="https://user-images.githubusercontent.com/41600558/72244561-e61a4480-3631-11ea-8d80-8ec124ec129e.png"/>
 
 - 약결합 시스템
 
@@ -43,7 +43,7 @@ ________
 
   하나의 시스템에서 장애가 발생해도 다른 시스템의 프로세서에 영향X
 
-  <img class="image image--xl" src="https://github.com/Ungdoong/ungdoong.github.io/blob/master/assets/images/약결합시스템.png"/>
+  <img class="image image--xl" src="https://user-images.githubusercontent.com/41600558/72244650-106c0200-3632-11ea-9793-6698bab04e63.png"/>
 
 ### 네트워크의 구조
 
@@ -57,7 +57,7 @@ ________
 
   신뢰성 높음
 
-  <img class="image image--xl" src="https://github.com/Ungdoong/ungdoong.github.io/blob/master/assets/images/완전연결네트워크.png"/>
+  <img class="image image--xl" src="https://user-images.githubusercontent.com/41600558/72244683-1feb4b00-3632-11ea-944c-d9bd3c6d43e9.png"/>
 
 - 트리(tree) 구조(계층(hierarchy) 구조)
 
@@ -71,7 +71,7 @@ ________
 
   부모가 고장나면 자식은 서로 통신 불가, 다른 프로세스와도 통신 불가
 
-  <img class="image image--xl" src="https://github.com/Ungdoong/ungdoong.github.io/blob/master/assets/images/트리구조네트워크.png"/>
+  <img class="image image--xl" src="https://user-images.githubusercontent.com/41600558/72244702-2d083a00-3632-11ea-9fec-9398d0ed8a99.png"/>
 
 - 성형(star) 구조
 
@@ -85,7 +85,7 @@ ________
 
   기본비용은 노드수에 비례, 통신비용 저렴, 집중 제어로 유지보수 용이
 
-  <img class="image image--xl" src="https://github.com/Ungdoong/ungdoong.github.io/blob/master/assets/images/성형구조네트워크.png"/>
+  <img class="image image--xl" src="https://user-images.githubusercontent.com/41600558/72244720-385b6580-3632-11ea-9470-3500aae14b79.png"/>
 
 - 링(ring) 구조
 
@@ -99,7 +99,7 @@ ________
 
   메시지가 링을 순환하면 통신비용 증가
 
-  <img class="image image--xl" src="https://github.com/Ungdoong/ungdoong.github.io/blob/master/assets/images/링구조네트워크.png"/>
+  <img class="image image--xl" src="https://user-images.githubusercontent.com/41600558/72244740-43ae9100-3632-11ea-84f8-6c0914180f3e.png"/>
 
 - 버스(bus) 구조
 
@@ -113,7 +113,7 @@ ________
 
   but, 버스가 고장나면 모든 노드 간 통신 불가능
 
-  <img class="image image--xl" src="https://github.com/Ungdoong/ungdoong.github.io/blob/master/assets/images/버스구조네트워크.png"/>
+  <img class="image image--xl" src="https://user-images.githubusercontent.com/41600558/72244760-4f01bc80-3632-11ea-82be-cca002174f69.png"/>
 
 ### 원격 프로시저 호출(RPC, Remot Procedure Call)
 
@@ -127,7 +127,7 @@ ________
 
 - 일반적인 RPC 단계(요청과 응답관계, 1:1)
 
-  <img class="image image--xl" src="https://github.com/Ungdoong/ungdoong.github.io/blob/master/assets/images/RPC.png"/>
+  <img class="image image--xl" src="https://user-images.githubusercontent.com/41600558/72244787-59bc5180-3632-11ea-8939-ff4e54d89ec3.png"/>
 
   
 
@@ -139,13 +139,13 @@ ________
 
 - RPC 동작 과정
 
-  <img class="image image--xl" src="https://github.com/Ungdoong/ungdoong.github.io/blob/master/assets/images/RPC동작과정.png"/>
+  <img class="image image--xl" src="https://user-images.githubusercontent.com/41600558/72244810-63de5000-3632-11ea-8175-515ad0f105a2.png"/>
 
 ### 분산 시스템의 구조와 구축 목적
 
 - 분산 시스템의 구조
 
-  <img class="image image--xl" src="https://github.com/Ungdoong/ungdoong.github.io/blob/master/assets/images/분산시스템.png"/>
+  <img class="image image--xl" src="https://user-images.githubusercontent.com/41600558/72244827-7062a880-3632-11ea-99e6-5cb188b75f3e.png"/>
 
   저렴한 노드 여러개를 운영체제 하나가 제어하여 하나의 프로그램처럼 동작
 
