docs:분산시스템과 다중처리시스템

--- a/_posts/2020-01-13-분산 및 다중 처리 시스템.md
+++ b/_posts/2020-01-13-분산 및 다중 처리 시스템.md
@@ -164,3 +164,12 @@ ________
   각종 자원의 투명성 보장
 
   => 상호연결된 컴퓨터를 사용자가 하나의 컴퓨터 시스템으로 인식할 수 있도록 함
+
+
+
+## 네트워크 운영체제
+
+### 네트워크 운영체제(NOS, Network Operating System)의 원리
+
+​	통신 제어, 분산된 자원을 공유하면서 독립된 시스템들을 서로 연결하기 위해 개발
+
