--- a/_posts/2020-01-14-Vuejs 기초문법.md
+++ b/_posts/2020-01-14-Vuejs 기초문법.md
@@ -243,3 +243,236 @@ watch: {
 }
 ```
 
+
+
+## Vuex
+
+- `./store/index.js`
+
+```javascript
+import Vue from 'vue'
+import Vuex from 'vuex'
+
+import state from './state'
+import mutations from './mutations'
+import actions from './actions'
+
+Vue.use(Vuex)
+
+export default new Vuex.Store({
+    state,
+    mutations,
+    actions,
+    getter
+})
+```
+
+- `./store/state.js`
+
+```javascript
+import data1 from '../data/data1'
+import data2 from '../data/data2'
+
+export default {
+	data1,
+	data2
+}
+```
+
+- `./views/display`
+
+```javascript
+import { mapState } from 'vuex'
+
+export default {
+	data() {
+		return {}
+	},
+	computed: {
+		...mapState([
+            'data1'
+		])	
+	}
+}
+```
+
+### 다른 방법
+
+```html
+<template>
+    <div>
+        //방법1
+        {{ pet().name }}
+        //방법2
+        {{ animal.name }}
+    </div>
+</template>
+
+<script>
+import { mapState } from 'vuex'
+    
+export default {
+    data() {
+        return {
+            //방법2
+            animal: {}
+        }
+    }
+    computed: {
+        ...mapState([
+            'cats',
+            'dogs'
+        ])
+    },
+    //방법 1
+    methods: {
+        pet() {
+            const animal = this[this.$route.params.species][this.$route.params.id]
+            return animal
+        }
+    },
+    //방법2
+    mounted() {
+        const animal = this[this.$route.params.species][this.$route.params.id]
+        this.animal = animal
+    }
+}
+</script>
+```
+
+
+
+## Vuex 액션 설정
+
+### Vuex Actions
+
+```javascript
+export default {
+	addPet: ({ commit }, payload) => {
+        context.commit('appendPet', payload)
+    }
+}
+```
+
+### Vuex Mutations
+
+```javascript
+export default {
+    appendPet: (state, { species, pet }) => {
+        state[species].push(pet)
+	}
+}
+```
+
+### Home.vue
+
+```html
+<template>
+	<div>
+        <h1>Adopt a new best friend.</h1>
+        <button class="btn btn-primary">
+            Add New Pet
+        </button>
+    </div>
+</template>
+
+<script>
+import { mapActions } from 'vuex'
+
+export default {
+    name: 'home',
+    data() {
+        return {
+            showPetForm: false,
+            formData: {
+                age: 0,
+                species: null
+            }
+        }
+    },
+    methods: {
+		...mapActions([
+            'addPet'
+        ]),
+        handleSubmit() {
+            const payload = {
+                const { species, age, name } = this.formData
+                species,
+                pet: {
+                    name,
+                    age
+                }
+            }
+            this.addPet(payload)
+        }
+    }
+}
+</script>
+```
+
+
+
+## Vuex getters
+
+- `./store/index.js`
+
+```javascript
+import getters from './getters'
+
+Vue.use(Vuex)
+
+export default new Vuex.Store({
+    state,
+    mutations,
+    actions,
+    getters
+})
+```
+
+- `./store/getters.js`
+
+```javascript
+export default {
+    animalsCount: (state) => {
+        return state.cats.length + state.dogs.length
+    }
+}
+```
+
+- `./views/home.vue`
+
+```javascript
+{{ animalsCount }}
+
+computed: {
+	...mapGetters([
+		'animalsCount'
+	])
+}
+```
+
+
+
+## 라우터 URL을 파라미터로 넘기기
+
+- `router.js`
+
+```javascript
+{
+	path: '/pets/:species/:id',
+	name: 'pet',
+	component: Pet
+}
+```
+
+- `Pet.vue`
+
+```html
+<template>
+    <div>
+        {{ $route.params.species }}
+        {{ $route.params.id }}
+    </div>
+</template>
+```
+
