--- a/_posts/2020-06-25-웹팩(Webpack)기본.md
+++ b/_posts/2020-06-25-웹팩(Webpack)기본.md
@@ -32,6 +32,18 @@
 
    5.2. [커스텀 플러그인 만들기](#5.2-커스텀-플러그인-만들기)
 
+6. [자주 사용하는 플러그인](#6.-자주-사용하는-플러그인)
+
+   6.1. [BannerPlugin](#6.1-bannerplugin)
+
+   6.2. [DefinePlugin](#6.2-defineplugin)
+
+   6.3. [HtmlWebpackPlugin](#6.3-htmlwebpackplugin)
+
+   6.4. [CleanWebpackPlugin](#6.4-cleanwebpackplugin)
+
+   6.5. [MiniCssExtractPlugin](#6.5-minicssextractplugin)
+
 
 
 ## 1. 배경
@@ -492,3 +504,283 @@ class MyPlugin {
 ```
 
 번들된 결과는 `compliation` 객체에 들어 있는데 `compliation.assets['main.js'].source()`함수로 접근할 수 있습니다. 실행하면 터미널에 번들링된 결과물을 확인할 수 있습니다.
+
+
+
+## 6. 자주 사용하는 플러그인
+
+### 6.1 BannerPlugin
+
+ 결과물에 빌드 정보나 커밋 버전 등을 추가하는 플러그인입니다.
+
+`webpack.config.js`
+
+```js
+const webpack = require('webpack');
+
+module.exports = {
+  plugins: [
+    new webpack.BannerPlugin({
+      banner: '이것은 배너 입니다',
+    })
+  ]
+```
+
+생성자에 전달하는 객체의 `banner` 속성에 문자열을 입력합니다. 빌드 시간이나 커밋정보를 전달하기 위해 함수를 이용할 수도 있습니다.
+
+```js
+new webpack.BannerPlugin({
+  banner: () => `빌드 날짜: ${new Date().toLocaleString()}`
+})
+```
+
+배너 정보가 많다면 파일로 분리시킬 수 있습니다.
+
+```js
+const banner = require('./banner.js');
+
+new webpack.BannerPlugin(banner);
+```
+
+커밋 해쉬와 빌드한 유저 정보를 추가해 보겠습니다.
+
+`banner.js`
+
+```js
+const childProcess = require('child_process');
+
+module.exports = function banner() {
+  const commit = childProcess.execSync('git rev-parse --short HEAD')
+  const user = childProcess.execSync('git config user.name')
+  const date = new Date().toLocaleString();
+  
+  return (
+    `commitVersion: ${commit}` +
+    `Build Date: ${date}\n` +
+    `Author: ${user}`
+  );
+}
+```
+
+
+
+### 6.2 DefinePlugin
+
+어플리케이션은 개발환경과 운영환경으로 나눠서 운용하는데, 환경에따라 API 서버 주소가 다를 수 있습니다. 같은 소스코드를 두 환경에 배포하기 위해서는 환경 의존적인 정보들은 코드 외부에서 관리하는 것이 좋습니다. 
+
+이러한 환경정보를 획득하기 위해 **DefinePlugin**을 사용합니다.
+
+`webpack.config.js`
+
+```js
+const webpack = require('webpack');
+
+export default {
+  plugins: [
+    new webpack.DefinePlugin({}),
+  ]
+}
+```
+
+빈 객체를 전달하여도 기본적으로 설정되는 값이 있습니다. 노드 환경정보인 `process.env.NODE_ENV` 가 그것인데, 웹팩 설정의 `mode`에 입력된 값이 여기에 들어갑니다. 예제에서는 "development" 가 입력됩니다.
+
+`app.js`
+
+```js
+console.log(process.env.NODE_ENV) // "development"
+```
+
+이 외에도 웹팩 컴파일 시간에 결정되는 값을 전역 상수 문자열로 어플리케이션에 주입할 수 있습니다.
+
+```js
+new webpack.DefinePlugin({
+  TWO: '1+1',
+})
+```
+
+`TWO`라는 전역 변수에 `1+1` 이란 코드 조각을 넣었습니다. 실제 어플리케이션 코드에서 이것을 출력하면 `2`가 나올 것입니다.
+
+코드가 아닌 값을 입력하려면 문자열화 한 뒤에 넘깁니다.
+
+```js
+new webpack.DefinePlugin({
+  VERSION: JSON.stringify('v.1.2.3'),
+  PRODUCTION: JSON.stringify(false),
+  MAX_COUNT: JSON.stringify(999),
+  'api.domain': JSON.stringify('http://dev.api.domain.com'),
+})
+```
+
+`app.js`
+
+```js
+console.log(VERSION) // 'v.1.2.3'
+console.log(PRODUCTION) // false
+console.log(MAX_COUNT) // 999
+console.log(api.domain) // 'http://dev.api.domain.com'
+```
+
+
+
+### 6.3 HtmlWebpackPlugin
+
+ **HtmlWebpackPlugin**은 HTML 파일 후처리에 사용합니다.  빌드 타임의 값을 넣거나 코드를 압축할 수 있습니다.
+
+이 플러그인은 서드 파티 패키지이므로 다운로드를 하여야 합니다.
+
+```sh
+$ npm i -D html-webpack-plugin
+```
+
+이 플러그인으로 빌드시 HTML파일로 아웃풋에 생성될 것입니다. index.html 파일을 src/index.html로 옮긴 뒤 다음과 같이 작성하였습니다.
+
+`src/index.html`
+
+```html
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>타이틀<%= env %></title>
+  </head>
+  <body>
+    <!-- 로딩 스크립트 제거 -->
+    <!-- <script src="dist/main.js"></script> -->
+  </body>
+</html>
+```
+
+`<title>` 부분에서 ejs 문법을 사용하였는데, `<%= env %>`는 전달받은 env 변수 값을 출력합니다. **HtmlWebpackPlugin**은 이 변수에 데이터를 주입시켜 동적으로 HTML 코드를 생성합니다.
+
+뿐만아니라 웹팩으로 빌드한 결과물을 자동로딩하는 코드를 주입해 줍니다. 그러므로 스크립트 로딩코드도 제거할 수 있습니다.
+
+`webpack.config.js`
+
+```js
+const HtmlWebpackPlugin = require('html-webpack-plugin');
+
+module.exports {
+  plugins: [
+    new HtmlWebpackPlugin({
+      template: './src/index.html', // 템플릿 경로를 지정 
+      templateParameters: { // 템플릿에 주입할 파라매터 변수 지정
+        env: process.env.NODE_ENV === 'development' ? '(개발용)' : '', 
+      },
+    })
+  ]
+}
+```
+
+`NODE_ENV=development`로 설정하여 빌드하면 *"타이틀 (개발용)"*으로 나옵니다. `NODE_ENV=production`으로 설정하면 *"타이틀"*로 출력됩니다.
+
+개발 환경과 달리 운영 환경에서는 파일을 압축하고 불필요한 주석을 제거하는 것이 좋습니다.
+
+`webpack.config.js`
+
+```js
+new HtmlWebpackPlugin({
+  minify: process.env.NODE_ENV === 'production' ? { 
+    collapseWhitespace: true, // 빈칸 제거 
+    removeComments: true, // 주석 제거 
+  } : false,
+}
+```
+
+(minify 옵션은 웹팩 버전 3 기준입니다)
+
+환경변수에 따라 `minify` 옵션을 사용했습니다. `NODE_ENV=production npm run build`로 빌드시 코드가 압축되고 주석이 제거됩니다.
+
+정적파일을 배포하면 브라우져 캐쉬에 의해 즉각 브라우져에 반영되지 않는 경우가 있습니다. 이를 위한 예방 옵션도 존재합니다.
+
+`webpack.config.js`
+
+```js
+new HtmlWebpackPlugin({
+  hash: true, // 정적 파일을 불러올때 쿼리문자열에 웹팩 해쉬값을 추가한다
+})
+```
+
+`hash: true` 옵션은 빌드시 생성하는 해쉬값을 정적파일 로딩 주소의 쿼리 문자열로 붙여 HTML을 생성합니다.
+
+
+
+### 6.4 CleanWebpackPlugin
+
+**CleanWebpackPlugin**은 빌드 이전의 과거 파일들을 제거하는 플러그인입니다. 이전 빌드 내용에 덮여쓰이면 상관없지만 그렇지 않을 경우 output 폴더에 잔재할 수 있습니다.
+
+```sh
+$ npm i -D clean-webpack-plugin
+```
+
+`webpack.config.js`
+
+```js
+const { CleanWebpackPlugin } = require('clean-webpack-plugin');
+
+module.exports = {
+  plugins: [
+    new CleanWebpackPlugin(),
+  ]
+}
+```
+
+설정 시 이전 빌드에서 남은 잔여 파일들이 삭제됩니다.
+
+
+
+### 6.5 MiniCssExtractPlugin
+
+ 스타일시트가 증가할수록 하나의 자바스크립트 결과물로 만드는 것이 부담이 될 수 있습니다. 번들 결과에서 스타일시트 코드만 추출하여 별도의 css파일로 만드는 것이 효율적일 수 있습니다. 브라우져에서 큰 파일 하나를 내려받는 것보다, **여러 개의 작은 파일들을 다운로드 하는 것이 더 빠르기** 때문입니다.
+
+ 개발 환경에서는 CSS를 하나의 모듈로 처리해도 상관없으나 운영환경에서는 분리하는 것이 효과적입니다. **MiniCssExtractPlugin**은 CSS를 별도 파일로 분리시키는 플러그인입니다.
+
+```sh
+$ npm i -D mini-css-extract-plugin
+```
+
+`webpack.config.js`
+
+```js
+const MiniCssExtractPlugin = require('mini-css-extract-plugin');
+
+module.exports = {
+  plugins: [
+    ...(
+      process.env.NODE_ENV === 'production' 
+      ? [ new MiniCssExtractPlugin({filename: `[name].css`}) ]
+      : []
+    ),
+  ],
+}
+```
+
+프로덕션 환경에서만 플러그인을 적용하도록 하였습니다. `filename`에 입력된 파일명으로 output 폴더에 CSS 파일이 생성될 것입니다.
+
+ 개발 환경에서는 **css-loader**에 의해 자바스크립트 모듈로 변경된 스타일시트를 적용하기 위하여 **style-loader**를 사용했습니다. 반면 프로덕션 환경에서는 별도의 CSS 파일로 추출했으므로 다른 로더가 필요합니다.
+
+```js
+module.exports = {
+  module: {
+    rules: [{
+      test: /\.css$/,
+      use: [
+        process.env.NODE_ENV === 'production' 
+        ? MiniCssExtractPlugin.loader  // 프로덕션 환경
+        : 'style-loader',  // 개발 환경
+        'css-loader'
+      ],
+    }]
+  }
+}
+```
+
+플러그인에서 제공하는 **MiniCssExtractPlugin.loader**를 추가합니다.
+
+빌드시 `dist/main.js`와 별도로 `dist/main.css`가 생성되고 `index.html`에 `dist/main.css`파일을 로드하는 코드가 추가됩니다.
+
+## 7. 마치며
+
+_________
+
+**ES2015** 이전에는 모듈을 만들기 위해 **즉시 실행 함수(IIFE)**와 **네임스페이스 패턴**을 사용했습니다. **Webpack**은 **ES2015** 모듈시스템의 사용을 용이하게 합니다.
+
+**ENTRY POINT**를 시작으로 연관된 모든 모듈들을 하나의 번들링 파일로 만드는 것이 **Webpack**의 역할입니다. 자바스크립트를 포함한 스타일시트, 이미지 파일 등을 모듈로서 제공해 주므로 일관성 있는 코드작성이 가능하도록 합니다.
