[Add]블록체인이 은행을 대체할 수 있을까

--- a/_posts/2020-08-26-블록체인이 은행을 대체할 수 있을까.md
+++ b/_posts/2020-08-26-블록체인이 은행을 대체할 수 있을까.md
@@ -1,11 +1,3 @@
-# 블록체인
-
-
-
-## 블록체인의 원리
-
-________________
-
 은행을 대체할만한 서비스를 만들 수 있을까? 
 
 이러한 의문에 대한 답을 찾기 위해서 고객이 은행을 신뢰하고 이용하는 이유를 알아야한다.
@@ -42,5 +34,38 @@ ________________
 
 ### 2. 거래 내역 검증
 
-​	
+​	거래가 올바른지 검증하는 것은 어렵지 않다. 중요한 것은 **'검증하는 사람은 반드시 정직해야 한다'**는 것이다.
 
+​	**블록체인은 매 블록을 생성할때마다 제비뽑기를 한다.** 참여자들이 돌아가며 블록을 검증하도록 함으로써 단일 주체에게 권한을 주지 않기 위해서이다.ㅣ
+
+​	하지만 한가지 문제가 있다. 제비뽑기로 뽑힌 사람이 정직하지 않은 경우이다. 뽑힌 사람이 '나쁜 짓'을 못하게 하기 위해 안정장치가 필요할 것이다.
+
+​	이는 2가지로 구성되어 있다.
+
+- ##### 첫째, 제비뽑기를 할 때 '비용'이 발생하도록 만든다.
+
+  ​	비용을 많이 지불할수록 제비를 더 많이 뽑을 수 있다. 검증에 참여할 때 상당한 양의 비용이 들게 해서 나쁜 의도를 가진 참여자를 걸러낸다. 검증에 참여하는 사람은 비용 지불을 통해 '신뢰할만한 사람'이라는 것을 증명한다. **참여 비용은 '물 관리'를 위한 최소한의 필터링 장치**이며, 이러한 비용을 지불한 참여자는 신뢰를 받기 위해 노력하고 보상을 극대화하려는 모습을 보인다.
+
+- ##### 둘째,  당첨이 된 사람에게는 네트워크의 가치에 영향을 받는 보상을 준다.
+
+  ​	검증의 대가로 네트워크는 보상을 지급한다. 이 보상은 주로 '암호화폐'인데, 암호화폐의 특징은 **가치가 변한다**는 것이다. 네트워크의 사용자가 많아질수록 암호화폐의 가치는 증가한다. 네트워크의 사용자가 많아지려면 네트워크가 신뢰성 있게 유지되어야 한다.
+
+  ​	합리적으로 생각했을 때, 검증자가 보상의 가치를 극대화하려면, 정직하게 잘 검증하여 네트워크의 신뢰를 유지해야 한다.
+
+
+
+​	이러한 장치들로 인해 **검증자는 정직하게 행동해야만 손해를 보지 않는다.**
+
+
+
+위 내용들로 보아 블록체인은 **단일 주체 없이 기록을 보관하고, 검증하는 시스템**이다.
+
+### 요약
+
+1. 장부에 쓰인 내용은 수정하거나 지울 수 없다.
+2. 모든 참여자가 이 장부의 사본을 가지고 있으며 언제든지 열람할 수 있다.
+3. 기록하기 전에 여러 명의 '정직한' 참여자들이 내용을 검증한다.
+
+### 결론
+
+​	**블록체인 기술에 의해 생성된 장부의 거래 기록은 모든 참여자가 믿을 수 있다. 어떤 개인이나 기관도 이 장부를 마음대로 조작하고 통제할 수 없다. 네트워크에는 누구나 참여할 수 있으며, 동시에 누구 한 명이 빠져도 네트워크에는 아무런 문제가 없다.**
