[Modify]블록체인 참조

--- a/_posts/2020-08-26-블록체인이 은행을 대체할 수 있을까.md
+++ b/_posts/2020-08-26-블록체인이 은행을 대체할 수 있을까.md
@@ -69,3 +69,13 @@
 ### 결론
 
 ​	**블록체인 기술에 의해 생성된 장부의 거래 기록은 모든 참여자가 믿을 수 있다. 어떤 개인이나 기관도 이 장부를 마음대로 조작하고 통제할 수 없다. 네트워크에는 누구나 참여할 수 있으며, 동시에 누구 한 명이 빠져도 네트워크에는 아무런 문제가 없다.**
+
+
+
+
+
+## 참조
+
+______
+
+- 아웃스탠딩 송범근 기자님의 포스팅 - https://brunch.co.kr/@bumgeunsong/50
