[Modify]블록체인 참조

--- a/_posts/2020-08-26-블록체인이 은행을 대체할 수 있을까.md
+++ b/_posts/2020-08-26-블록체인이 은행을 대체할 수 있을까.md
@@ -76,6 +76,4 @@
 
 ## 참조
 
-______
-
-- 아웃스탠딩 송범근 기자님의 포스팅 - https://brunch.co.kr/@bumgeunsong/50
+- 5분 만에 이해하는 블록체인의 원리 - https://brunch.co.kr/@bumgeunsong/50
