[Modify]config.yml

--- a/_posts/2020-08-26-블록체인이 은행을 대체할 수 있을까.md
+++ b/_posts/2020-08-26-블록체인이 은행을 대체할 수 있을까.md
@@ -1,3 +1,17 @@
+---
+
+excerpt_separator: <!--more--> 
+
+---
+
+Excerpt with multiple paragraphs 
+
+Here's another paragraph in the excerpt. 
+
+<!--more--> 
+
+Out-of-excerpt
+
 은행을 대체할만한 서비스를 만들 수 있을까? 
 
 이러한 의문에 대한 답을 찾기 위해서 고객이 은행을 신뢰하고 이용하는 이유를 알아야한다.
