[Modify]config.yml

--- a/_posts/2020-08-26-블록체인이 은행을 대체할 수 있을까.md
+++ b/_posts/2020-08-26-블록체인이 은행을 대체할 수 있을까.md
@@ -1,3 +1,31 @@
+---
+
+layout: article 
+
+title: 블록체인이 은행을 대체할 수 있을까?
+
+header:  
+
+​	theme: dark  
+
+​	background: 'linear-gradient(135deg, rgb(34, 139, 87), rgb(139, 34, 139))' 
+
+article_header:  
+
+​	type: overlay  
+
+​	theme: dark  
+
+​	background_color: '#203028' 
+
+​	background_image:    
+
+​		gradient: 'linear-gradient(135deg, rgba(34, 139, 87 , .4), rgba(139, 34, 139, .4))'    
+
+​		src: https://user-images.githubusercontent.com/41600558/91507609-39ff4280-e910-11ea-8758-5ea9fde3479b.jpg
+
+---
+
 은행을 대체할만한 서비스를 만들 수 있을까? 
 
 이러한 의문에 대한 답을 찾기 위해서 고객이 은행을 신뢰하고 이용하는 이유를 알아야한다.
