[Modify]config.yml

--- a/_posts/2020-08-26-블록체인이 은행을 대체할 수 있을까.md
+++ b/_posts/2020-08-26-블록체인이 은행을 대체할 수 있을까.md
@@ -22,7 +22,7 @@ article_header:
 
 ​		gradient: 'linear-gradient(135deg, rgba(34, 139, 87 , .4), rgba(139, 34, 139, .4))'    
 
-​		src: https://user-images.githubusercontent.com/41600558/91507609-39ff4280-e910-11ea-8758-5ea9fde3479b.jpg
+​		src: /docs/assets/images/blockchain.jpg 
 
 ---
 
