--- a/_posts/2020-08-26-블록체인이 은행을 대체할 수 있을까.md
+++ b/_posts/2020-08-26-블록체인이 은행을 대체할 수 있을까.md
@@ -1,17 +1,25 @@
 ---
-layout: article 
-title: 블록체인이 은행을 대체할 수 있을까?
-header:  
-​	theme: dark  
-​	background: 'linear-gradient(135deg, rgb(34, 139, 87), rgb(139, 34, 139))' 
-article_header:  
-​	type: overlay  
-​	theme: dark  
-​	background_color: '#203028' 
-​	background_image:    
-​		gradient: 'linear-gradient(135deg, rgba(34, 139, 87 , .4), rgba(139, 34, 139, .4))'    
-​		src: /assets/images/blockchain.jpg 
+layout: article
+title: Page - Article Header Overlay Background Image (Immersive + Translucent Header)
+permalink: /page/article-header-overlay-background-image-immersive-translucent-header.html
+key: page-article-header-overlay-background-image-ITH
+cover: /docs/assets/images/axure/page-article-header-overlay-background-image-immersive-translucent-header.jpg
+mode: immersive
+header:
+  theme: dark
+article_header:
+  type: overlay
+  theme: dark
+  background_color: '#203028'
+  background_image:
+    gradient: 'linear-gradient(135deg, rgba(34, 139,87 , .4), rgba(139, 34, 139, .4))'
+    src: /docs/assets/images/blockchain.jpg
+
 ---
+
+A post has an article header overlay with a background image in immersive mode with a translucent header.
+
+
 
 은행을 대체할만한 서비스를 만들 수 있을까? 
 
