[modify]블록체인은 왜 혁신적일까?

--- a/_posts/2020-08-26-블록체인이 은행을 대체할 수 있을까.md
+++ b/_posts/2020-08-26-블록체인이 은행을 대체할 수 있을까.md
@@ -1,6 +1,9 @@
 ---
 layout: article
-title: Page - Article Header Overlay Background Image (Immersive + Translucent Header)
+title: '블록체인이 은행을 대체할 수 있을까?'
+permalink: /page/article-header-overlay-background-image-immersive-translucent-header.html
+key: page-article-header-overlay-background-image-ITH
+cover: /docs/assets/images/axure/page-article-header-overlay-background-image-immersive-translucent-header.jpg
 mode: immersive
 header:
   theme: dark
