--- a/_posts/2020-08-26-블록체인이 은행을 대체할 수 있을까.md
+++ b/_posts/2020-08-26-블록체인이 은행을 대체할 수 있을까.md
@@ -13,13 +13,9 @@ article_header:
   background_color: '#203028'
   background_image:
     gradient: 'linear-gradient(135deg, rgba(34, 139,87 , .4), rgba(139, 34, 139, .4))'
-    src: /docs/assets/images/blockchain.jpg
+    src: '/docs/assets/images/blockchain.jpg'
 
 ---
-
-A post has an article header overlay with a background image in immersive mode with a translucent header.
-
-
 
 은행을 대체할만한 서비스를 만들 수 있을까? 
 
