[modify]블록체인은 왜 혁신적일까?

--- a/_posts/2020-08-26-블록체인은 왜 혁신적일까.md
+++ b/_posts/2020-08-26-블록체인은 왜 혁신적일까.md
@@ -1,6 +1,6 @@
 ---
 layout: article
-title: '블록체인이 은행을 대체할 수 있을까?'
+title: '블록체인은 왜 혁신적일까?'
 permalink: /page/article-header-overlay-background-image-immersive-translucent-header.html
 key: page-article-header-overlay-background-image-ITH
 cover: /docs/assets/images/axure/page-article-header-overlay-background-image-immersive-translucent-header.jpg
@@ -16,9 +16,9 @@ article_header:
     src: '/docs/assets/images/blockchain.jpg'
 ---
 
-### 개요
-
 은행을 대체할만한 서비스를 만들 수 있을까? 
+
+<!--more-->
 
 이러한 의문에 대한 답을 찾기 위해서 고객이 은행을 신뢰하고 이용하는 이유를 알아야한다.
 
