[modify]블록체인은 왜 혁신적일까?

--- a/_posts/2020-08-26-블록체인은 왜 혁신적일까.md
+++ b/_posts/2020-08-26-블록체인은 왜 혁신적일까.md
@@ -13,7 +13,7 @@ article_header:
   background_color: '#203028'
   background_image:
     gradient: 'linear-gradient(135deg, rgba(34, 139,87 , .4), rgba(139, 34, 139, .4))'
-    src: '/docs/assets/images/blockchain.jpg'
+    src: 'url("https://user-images.githubusercontent.com/41600558/91546614-b2d8bb80-e95d-11ea-807e-28efee39390f.jpg")'
 ---
 
 은행을 대체할만한 서비스를 만들 수 있을까? 
